Documentation edits made through Mintlify web editor

--- a/quality-checks/redem-score.mdx
+++ b/quality-checks/redem-score.mdx
@@ -29,6 +29,6 @@ At the core of ReDem lies a 360-degree approach, enabling us to analyze intervie
   </Card>
 
   <Card title="Grid-Question Score" icon="list" href="/quality-checks/grid-question-score">
-    The grid-question score evaluates respondents according to their response behavior within one or more matrix-questions
+    The Grid-Question Score (GQS) uses AI to assess respondents based on their response behavior in one or more matrix questions.
   </Card>
 </CardGroup>
