Documentation edits made through Mintlify web editor

--- a/miscellaneous/redem-credits.mdx
+++ b/miscellaneous/redem-credits.mdx
@@ -65,11 +65,9 @@ The following list offers a clear overview of how credits are calculated based o
 
 * **Coherence Score (CHS):** A maximum of **20 data points** is included in the base calculation, costing **3 credits** per respondent. For additional data points beyond 20, each incurs an extra cost of **0.2 credits**.
 
-* **No Credits for Empty Answers or Missing Values:** Credits are only applied to valid, present data points. No credits are charged for empty responses or missing values.<br />
-  No credits are calculated for empty answers or missing values within the data. Credits are only applied to valid, present data points.
+* **No Credits for Empty Answers or Missing Values:** Credits are only applied to valid, present data points. No credits are charged for empty responses or missing values.
 
-* **Total Credit Calculation for Surveys**: The total cost of a survey is calculated by adding up the credit costs for all respondents. Each respondent's credit usage is determined by their individual data points and the quality checks applied.<br />
-
+* **Total Credit Calculation for Surveys**: The total cost of a survey is calculated by adding up the credit costs for all respondents. Each respondent's credit usage is determined by their individual data points and the quality checks applied.
 
 <br />
 
