Documentation edits made through Mintlify web editor

--- a/features/cleaning-and-review.mdx
+++ b/features/cleaning-and-review.mdx
@@ -13,15 +13,15 @@ ReDem’s data cleaning feature automates and streamlines this process, providin
 
 ## How does cleaning work?
 
-Each respondent evaluated by ReDem undergoes a series of quality checks. These checks help us to assign a score and categorize each response provided by the respondent. This process forms the foundation of ReDem's data cleaning feature.
+Every respondent evaluated by ReDem undergoes a series of rigorous quality checks. These checks assign a score and categorize each response, forming the foundation of ReDem’s data cleaning process.
 
-In ReDem, there are two main ways to clean your data:
+ReDem offers two primary methods for cleaning your data::
 
 ### Using ReDem Default Cleaning Settings
 
-With the ReDem team's expertise and the quality checks applied to each respondent, we've designed default cleaning settings to handle the most common scenarios.
+Leveraging the ReDem team’s expertise and comprehensive quality checks, we’ve developed default cleaning settings tailored to address the most common scenarios.
 
-Here's an overview of the defaults settings:
+Here’s a summary of the default settings:
 
 **ReDem Score**: `60` <br /> Respondent with a **ReDem score below 60** are flagged as excluded.
 
