Documentation edits made through Mintlify web editor

--- a/quality-checks/coherence-score.mdx
+++ b/quality-checks/coherence-score.mdx
@@ -15,7 +15,7 @@ The Coherence Score evaluates the entire interview and assigns a score ranging f
 
 ## Use of GPT-4 for Coherence-Score
 
-ReDem uses GPT-4 hosted on Microsoft Azure with a deployment in the EU region.
+For the Coherence-Score, ReDem uses GPT-4 hosted on Microsoft Azure with a deployment in the EU region.
 
 ### Individual Responses & Anonymity
 
