Updated the welcome and how-it-works pages to comment out the sections related to importing survey data, benchmarking, and exporting results.
replace the redem score image with correct image

hide credit calculation page from navigation

--- a/how-it-works.mdx
+++ b/how-it-works.mdx
@@ -20,9 +20,9 @@ ReDem ensures data quality at every stage, from survey design to final data outp
     **🔥 Start by importing your first survey data:**
 
     <CardGroup cols={2}>
-      <Card title="Manual Data Import" icon="file-import">
+      {/* <Card title="Manual Data Import" icon="file-import">
         Easily bring your survey data into ReDem by manually uploading it through the ReDem Application!
-      </Card>
+      </Card> */}
 
       <Card title="Try our API" icon="code" href="/api-reference/introduction">
         Discover how to effortlessly integrate the ReDem API into your workflows and applications for a smoother experience!
