--- a/welcome.mdx
+++ b/welcome.mdx
@@ -26,25 +26,25 @@ To gain a clearer understanding of [how ReDem works](/how-it-works) and what it 
     Explore the various quality checks ReDem performs to ensure top-tier data quality.
   </Card>
 
-  <Card title="Import your first survey data" icon="file-import" href="/features/data-import">
+  {/* <Card title="Import your first survey data" icon="file-import" href="/features/data-import">
     Begin by importing your first survey data into ReDem to get started.
-  </Card>
+  </Card> */}
 
   <Card title="Explore the API Reference" icon="code" href="/api-reference">
     Dive into the API Reference to understand request and response formats in detail.
   </Card>
 
-  <Card title="Discover Cleaning and Review" icon="broom-wide" href="/features/cleaning-and-review">
-    Discover how ReDem makes data cleaning and review easier.
+  <Card title="Discover Cleaning" icon="broom-wide" href="/features/cleaning-and-review">
+    Discover how ReDem makes data cleaning easier.
   </Card>
 
-  <Card title="Learn about Benchmarking" icon="chart-line" href="/features/benchmarking">
+  {/* <Card title="Learn about Benchmarking" icon="chart-line" href="/features/benchmarking">
     Gain deeper insights with ReDem’s benchmarking feature.
-  </Card>
+  </Card> */}
 
-  <Card title="Export your results" icon="file-export" href="/features/export-results">
+  {/* <Card title="Export your results" icon="file-export" href="/features/export-results">
     Learn how to export results from ReDem efficiently.
-  </Card>
+  </Card> */}
 </CardGroup>
 
 <br />
