Documentation edits made through Mintlify web editor

--- a/features/cleaning-and-review.mdx
+++ b/features/cleaning-and-review.mdx
@@ -58,20 +58,18 @@ To customize the cleaning process, you can create your own custom cleaning setti
 
 ## What is the outcome of the cleaning process?
 
-The cleaning process categorizes each response as either `Included` or `Excluded`, with clear reasons provided for any exclusions. This ensures transparency and helps identify areas that may need further attention or adjustments.
+The cleaning process classifies each response as either **Included** or **Excluded**, with clear reasons provided for exclusions. This ensures transparency and highlights areas that may require further attention or adjustments.
 
-Set of Reasons for Exclusion:
+**Reasons for Exclusion** (only one needs to be true):
 
-* `ReDem Score Threshold`: The respondent's ReDem score is below than default threshold.
+* **ReDem Score Threshold**: Respondent’s ReDem Score is below the default (60) or a custom threshold.
 
-* `Open-Ended Score Threshold`: The respondent's OES score is below than default threshold.
+* **Open-Ended Score (OES) Threshold**: Respondent’s OES is below the default (30) or a custom threshold.
 
-* `Open-Ended Category`: The respondent's responses meet the criteria for one or more of the Open-ended answer categories.
+* **Time Score (TS) Threshold**: Respondent’s TS is below the default (20) or a custom threshold.
 
-* `Coherence Score Threshold`: The respondent's CHS score is below than default threshold.
+* **Grid-Question Score (GQS) Threshold**: Respondent’s GQS is below a custom threshold.
 
-* `Grid-Question Score Threshold`: The respondent's GQS score is below than default threshold.
+* **Coherence Score (CHS) Threshold**: Respondent’s CHS is below a custom threshold.
 
-* `Time Score Threshold`: The respondent's TS score is below than default threshold.
-
-This structured reasoning provides clarity on exclusions and enables users to refine their criteria based on the analysis.
+This structured reasoning provides clear insights into exclusions, empowering users to refine their criteria based on the analysis.
