Documentation edits made through Mintlify web editor

--- a/welcome.mdx
+++ b/welcome.mdx
@@ -35,7 +35,7 @@ Explore our detailed step-by-step guide to gain a clear understanding of [how Re
   </Card>
 
   <Card title="Discover Cleaning and Review" icon="broom-wide" href="/features/cleaning-and-review">
-    Learn how ReDem simplifies data cleaning and review..
+    Learn how ReDem simplifies data cleaning and review.
   </Card>
 
   <Card title="Learn about Benchmarking" icon="chart-line" href="/features/benchmarking">
