Documentation edits made through Mintlify web editor

--- a/miscellaneous/questionnaire-criteria.mdx
+++ b/miscellaneous/questionnaire-criteria.mdx
@@ -5,13 +5,11 @@ icon: "clipboard-check"
 iconType: "regular"
 ---
 
-Learn how to enhance fraud detection in online surveys by strategically designing questionnaires that maximize the effectiveness of our advanced technological quality checks.
-
-If your questionnaire doesn’t meet these criteria, consider enhancing it for better results.&#x20;
-
-Open-ended questions are particularly effective for ensuring data quality. We recommend to use at least **two mandatory open-ended questions** that all respondents must answer. The open-ended questions can be added for quality control purposes only and do not need to be evaluated.
+Improve fraud detection by strategically designing your questionnaires to maximize the effectiveness of ReDem’s advanced quality checks. If your questionnaire doesn’t meet these criteria, consider refining it for better results.
 
 ### Open-Ended Questions
+
+Open-ended questions are highly effective for ensuring data quality. As described in detail below we recommend including at least two mandatory open-ended questions in every survey. These questions can serve purely as quality control measures and don’t necessarily need evaluation.
 
 * **Mandatory:** Fraudsters often avoid answering open-ended questions if they can, and inattentive participants tend to skip them too. Therefore, making these questions mandatory is crucial. If designed appropriately (e.g., not too many or overly difficult questions), the dropouts caused by mandatory open-ended questions can actually improve data quality by filtering out disengaged participants.
 
@@ -23,7 +21,7 @@ Open-ended questions are particularly effective for ensuring data quality. We re
 
 ### Grid-Questions
 
-* We recommend to include at least **1 grid question** with at least **7 items** (the more, the better) and in each case at least **4 attribute values** (e.g., a Likert scale).
+Grid questions provide a useful tool for in-survey quality checks by allowing the analysis of participant click behavior for signs of inattentiveness or fraud. As described in detail below we recommend to include at least one grid question with at least seven items (the more, the better) and in each case 4 or more attribute values (e.g., a Likert scale).
 
 * **Sufficient Number of Statements:** To accurately determine whether responses are genuine or arbitrary, a grid question should include a sufficient number of statements. Our experience suggests a minimum of seven statements for this purpose.
 
@@ -33,10 +31,12 @@ Open-ended questions are particularly effective for ensuring data quality. We re
 
 ### Time Durations
 
-* Capture the **total interview duration** to identify unusually fast or slow responses.
+Tracking time durations provides valuable insights into participant behavior and response quality. As described below we recommend to evaluate response times for a few questions that need&#x20;
 
-* Consider measuring durations for specific sections (e.g., matrix questions with substantial text or open-ended responses) for more insight.
+* **Total Interview Duration**: Measure the overall survey completion time to flag unusually fast or slow responses, which may indicate inattentiveness or fraud.
 
-* Avoid timing short yes/no questions or demographic inquiries, as they are too brief for meaningful analysis.
+* **Section-Specific Timing**: Focus on timing longer sections, such as matrix questions with substantial text or open-ended responses, to gain deeper insights into engagement levels.
 
-* If interruptions are possible during survey completion, ensure they don’t interfere with time tracking.
+* **Exclude Short Sections**: Avoid timing brief sections, like yes/no questions or demographic inquiries, as their duration offers little meaningful information.
+
+* **Account for Interruptions**: Ensure that potential interruptions during survey completion do not interfere with accurate time tracking.
