Documentation edits made through Mintlify web editor

--- a/miscellaneous/questionnaire-criteria.mdx
+++ b/miscellaneous/questionnaire-criteria.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Questionnaires to Unlock the Power of ReDem"
-description: "Enhance fraud detection in online surveys with strategic design to maximize the effectiveness of ReDem"
+description: "Enhance fraud detection in online surveys with strategic design "
 icon: "clipboard-check"
 iconType: "regular"
 ---
@@ -9,7 +9,7 @@ Improve fraud detection by strategically designing your questionnaires to maximi
 
 ### Open-Ended Questions
 
-Open-ended questions are highly effective for ensuring data quality. As described in detail below we recommend including at least two mandatory open-ended questions in every survey. These questions can serve purely as quality control measures and don’t necessarily need evaluation.
+Open-ended questions are highly effective for ensuring data quality. As described in detail below **we recommend including at least two mandatory open-ended questions** in every survey. These questions can serve purely as quality control measures and don’t necessarily need evaluation.
 
 * **Mandatory:** Fraudsters often avoid answering open-ended questions if they can, and inattentive participants tend to skip them too. Therefore, making these questions mandatory is crucial. If designed appropriately (e.g., not too many or overly difficult questions), the dropouts caused by mandatory open-ended questions can actually improve data quality by filtering out disengaged participants.
 
@@ -21,7 +21,7 @@ Open-ended questions are highly effective for ensuring data quality. As describe
 
 ### Grid-Questions
 
-Grid questions provide a useful tool for in-survey quality checks by allowing the analysis of participant click behavior for signs of inattentiveness or fraud. As described in detail below we recommend to include at least one grid question with at least seven items (the more, the better) and in each case 4 or more attribute values (e.g., a Likert scale).
+Grid questions provide a useful tool for in-survey quality checks by allowing the analysis of participant click behavior for signs of inattentiveness or fraud. As described in detail below **we recommend to include at least one grid question with at least seven items** (the more, the better) and in each case 4 or more attribute values (e.g., a Likert scale).
 
 * **Sufficient Number of Statements:** To accurately determine whether responses are genuine or arbitrary, a grid question should include a sufficient number of statements. Our experience suggests a minimum of seven statements for this purpose.
 
@@ -31,11 +31,11 @@ Grid questions provide a useful tool for in-survey quality checks by allowing th
 
 ### Time Durations
 
-Tracking time durations provides valuable insights into participant behavior and response quality. As described below we recommend to evaluate response times for a few questions that need&#x20;
+To ensure the accuracy and relevance of timing-based quality checks, we recommend capturing not only the total interview duration (LOI) but also detailed timing data for individual sections of the survey. Fraudsters and bots often manipulate total duration by quickly completing the questionnaire and then idling until the total time appears realistic before closing the survey. Section-specific timing helps detect such behavior, providing a more reliable measure of engagement and authenticity.&#x20;
 
-* **Total Interview Duration**: Measure the overall survey completion time to flag unusually fast or slow responses, which may indicate inattentiveness or fraud.
+* **Total Interview Duration**: Measure the overall survey completion time to flag unusually fast or slow responses, which may indicate inattentiveness or fraud.&#x20;
 
-* **Section-Specific Timing**: Focus on timing longer sections, such as matrix questions with substantial text or open-ended responses, to gain deeper insights into engagement levels.
+* **Section-Specific Timing**: Focus on timing longer sections, such as matrix or multiple choice questions with substantial text or open-ended responses, to gain deeper insights into engagement levels.
 
 * **Exclude Short Sections**: Avoid timing brief sections, like yes/no questions or demographic inquiries, as their duration offers little meaningful information.
 
