Documentation edits made through Mintlify web editor

--- a/miscellaneous/questionnaire-criteria.mdx
+++ b/miscellaneous/questionnaire-criteria.mdx
@@ -40,3 +40,13 @@ To ensure the accuracy and relevance of timing-based quality checks, we recommen
 * **Exclude Short Sections**: Avoid timing brief sections, like yes/no questions or demographic inquiries, as their duration offers little meaningful information.
 
 * **Account for Interruptions**: Ensure that potential interruptions during survey completion do not interfere with accurate time tracking.
+
+### Trap Questions
+
+Adding trap questions to your survey is a powerful way to boost the effectiveness of ReDem's Coherence Score.  Trap questions can take various forms, such as differently worded repeat questions, prompts to select a specific answer option, or questions with nonsense or non-existing options. The latter, for example, can expose overclaiming, where respondents - often fraudsters - select as many options as possible to increase their chances of qualifying for the survey. The primary purpose of trap questions is to assess the quality of responses rather than to gather content for analysis. Careful implementation is essential. Consider the following:
+
+* **Use Sparingly:** Incorporate only a maximum of two trap questions to avoid overwhelming or irritating participants.
+
+* **Design Subtly:** Ensure that trap questions are not easily recognized as such to maintain their effectiveness, as revealing their intent could lead participants to adjust their responses to match the study's criteria.
+
+* **Avoid Sole Reliance:** Use trap questions as part of ReDem's broader quality assurance strategy, rather than as the sole measure of interview quality. Overreliance could unfairly penalize careful participants who make an isolated error, leading to unnecessary exclusions and loss of earned incentives.
