Documentation edits made through Mintlify web editor

--- a/miscellaneous/questionnaire-criteria.mdx
+++ b/miscellaneous/questionnaire-criteria.mdx
@@ -49,4 +49,4 @@ Adding trap questions to your survey is a powerful way to boost the effectivenes
 
 * **Design Subtly:** Ensure that trap questions are not easily recognized as such to maintain their effectiveness, as revealing their intent could lead participants to adjust their responses to match the study's criteria.
 
-* **Avoid Sole Reliance:** Use trap questions as part of ReDem's broader quality assurance strategy, rather than as the sole measure of interview quality. Overreliance could unfairly penalize careful participants who make an isolated error, leading to unnecessary exclusions and loss of earned incentives.
+* **Avoid Sole Reliance:** Use trap questions only as part of ReDem's broader quality assurance strategy, rather than as the sole measure of interview quality. Overreliance could unfairly penalize careful participants who make an isolated error, leading to unnecessary exclusions and loss of earned incentives.
