Documentation edits made through Mintlify web editor

--- a/api-reference/intro/for-researchers.mdx
+++ b/api-reference/intro/for-researchers.mdx
@@ -6,16 +6,16 @@ iconType: "regular"
 ---
 
 <Steps titleSize="h3">
-  <Step title="Login and create an API key">
-    <p> Login into your ReDem account and create an API key. </p>
+  <Step title="Login and create a ReDem API key">
+    Log in to your ReDem account and navigate to the account settings.
+    Generate a new API key and copy it for use.
+  </Step>
 
-    1. Login to ReDem application and navigate to the account
-    2. Create new API key and copy the API Key
-  </Step>
   <Step title="Integrate ReDem API into your workflow">
-    <p>Integrate ReDem API into your workflow by using the API key to authenticate your requests.</p>
+    Use your API key to authenticate requests and seamlessly integrate the ReDem API into your workflow.
   </Step>
-  <Step title="Use API response to trigger your next step">
+
+  <Step title="Use ReDem API response to trigger your next step">
     <p>Use the API response to trigger your next step in your workflow.</p>
   </Step>
 </Steps>
