--- a/api-reference/intro/introduction.mdx
+++ b/api-reference/intro/introduction.mdx
@@ -23,7 +23,7 @@ The ReDem API supports two main integration use cases, allowing you to choose th
   </Card>
 
   <Card title="For Panels" icon="screwdriver-wrench" href="/api-reference/intro/for-survey-tools">
-    Automatically synchronize data quality scores with your systems at regular intervals for continuous analysis..
+    Automatically synchronize data quality scores with your systems at regular intervals for continuous analysis.
   </Card>
 </CardGroup>
 
