--- a/api-reference/intro/for-survey-tools.mdx
+++ b/api-reference/intro/for-survey-tools.mdx
@@ -5,17 +5,16 @@ icon: "screwdriver-wrench"
 iconType: "regular"
 ---
 
-<Info>To integrate ReDem with your survey tool, you'll need a ReDem account. <br/> Don’t have an account yet? Get started by [setting up your account](/account-setup).</Info>
+<Info>To integrate ReDem with your survey tool, you'll need a ReDem account. <br /> Don’t have an account yet? Get started by [setting up your account](/account-setup).</Info>
 
 <Steps titleSize="h3">
   <Step title="Login and create an API key">
-    <p> Login into your ReDem account and create an API key. </p>
-
-    1. Login to ReDem application and navigate to the account
-    2. Create new API key and copy the API Key
+    Log in to your ReDem account and navigate to the account settings.
+    Generate a new API key and copy it for use.
   </Step>
+
   <Step title="Prepare your request data">
-    <p>Ensure your data is formatted correctly according to the guidelines before sending it via the API. Below is a sample request object to help you structure your data properly.</p>
+    Ensure your data is formatted correctly according to the guidelines before sending it via the API. Below is a sample request object to help you structure your data properly.
 
     <p>As a survey tool, we **recommend adopting an asynchronous response approach**. Therefore, keep the `synchronousResponse` field set to `false`. It allows you to continue engaging with your respondents without waiting for a response from ReDem.</p>
 
@@ -62,6 +61,7 @@ iconType: "regular"
 
     <Note>For a complete example and more information on how to use this request object, visit the [Add Respondent](/api-reference/endpoint/addRespondent) endpoint. It provides detailed explanations of all fields and their usage.</Note>
   </Step>
+
   <Step title="Make an API request">
     <p>Submit an API request to ReDem, including the respondent's information and the API key</p>
 
@@ -80,6 +80,7 @@ iconType: "regular"
 
     <Note>For a complete example and more information on how to send the request, visit the [Add Respondent](/api-reference/endpoint/addRespondent) endpoint. It provides detailed explanations of all fields and their usage.</Note>
   </Step>
+
   <Step title="Interpret the API Response">
     <p>Retrieve the response from ReDem to ensure your request was successfully submitted and is still in progress.</p>
 
@@ -91,9 +92,10 @@ iconType: "regular"
 
     <Note>For a complete example and more information on how to use this response object, visit the [Add Respondent](/api-reference/endpoint/addRespondent) endpoint. It provides detailed explanations of all fields and their usage.</Note>
   </Step>
+
   <Step title="Synchronize respondent evaluations">
     <p>Since an asynchronous response approach is recommended, you can synchronize respondent evaluations from ReDem into your survey tool at any time.</p>
-    
+
     <p> To streamline the process, you can set up an automated job that performs the synchronization on a daily basis, ensuring your data remains up-to-date without requiring manual intervention. </p>
 
     <p>To do this, you can use the [Get All Respondents](/api-reference/endpoint/getAllRespondents) endpoint.</p>
