Refactor cleaning settings to exclude generic answers and adjust thresholds for open-ended responses

--- a/api-reference/intro/for-survey-tools.mdx
+++ b/api-reference/intro/for-survey-tools.mdx
@@ -46,7 +46,7 @@ iconType: "regular"
           "score": 60,
           "minDataPoints":2,
           "categories": {
-            "genericAnswersnoInformation": {"exclude": false, "minDataPoints":2},
+            "genericAnswers": {"exclude": false, "minDataPoints":2},
             "noInformation": {"exclude": false, "minDataPoints":2},
             // ... other categories ...
           }
